# latex_rust

./: .gitignore  Cargo.toml
src/: document.rs  lib.rs  main.rs  utils.rs
src/test/: test.rs
templates/: template_latex.txt
