[package]
name = "latex_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
polars = { version = "0.36.2", features = [
    "lazy",
    "temporal",
    "describe",
    "json",
    "parquet",
    "dtype-datetime",
] }
reqwest = { version = "0.11.23", features = ["blocking"] }
soup = "0.5.1"
