[package]
name = "latex_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
polars = { version = "0.36.2", features = [
    "lazy",
    # "temporal",
    # "describe",
    # "json",
    # "parquet",
    # "dtype-datetime",
] }
ratatui = "0.24.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
soup = "0.5.1"
tui-prompts = "0.3.2"


[general]
whitespace = "suppress"

[[escaper]]
extensions = ["tex"]
